# sigscore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sigscore/: __init__.py  annotate.py  core.py  meta_program.py
src/sigscore/signatures/: __init__.py  tumor_meta_programs.py
